# pioneer

./: .clang-format  .clangd  .dir-locals.el  .editorconfig  .gitattributes  .gitignore  .travis.yml  AUTHORS  AUTHORS.txt  AUTHRORS.txt  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  COMPILING-README-DAMMIT  COMPILING.CMake.txt  COMPILING.OSX  COMPILING.OSX.txt  COMPILING.txt  CTestConfig.cmake  Changelog.txt  ClangBuildAnalyzer.ini  CppProperties.json  Makefile.am  Makefile.common  Makefile.in  Making models using SBRE.txt  Modelviewer.txt  NEWS.md  New Microsoft Word Document.docx  Paragon_AUTHORS.txt  Paragon_Changelog.txt  Pioneer Manual.docx  Pioneer Manual.txt  Quickstart.txt  README.md  README.txt  SAVEBUMP.txt  TODO  TechnicalInfo.html  Welcome Letter.doc  (+27 more)
contrib/imgui/: .gitignore  CMakeLists.txt  Makefile.am  README-pioneer.org  README-pioneer.txt  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_internal.h
contrib/jobswarm/: CoreCount.cpp  CoreCount.h  JobManager.cpp  JobManager.h  JobSwarm.cpp  JobSwarm.h  LockFreeQ.cpp  LockFreeQ.h  Makefile.am  ThreadConfig.cpp  ThreadConfig.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  UserMemAlloc.h  pool.h
contrib/lua/: CMakeLists.txt  Makefile.am  lua.hpp
contrib/lz4/: CMakeLists.txt
contrib/nanosockets/: CMakeLists.txt  nanosockets.c  nanosockets.h
contrib/oolua/: CMakeLists.txt  Makefile.am  base_checker.h  class_from_stack.h  cpp_constructor.h  fwd_push_pull.h  lua_function.cpp  lua_function.h  lua_includes.h  lua_operator.h  lua_ref.h  lua_stack_dump.h  lvd_types.h  member_func_helper.h  oolua_c_func.h  oolua_member_function.h  oolua_paramater_macros.h  oolua_storage.cpp  oolua_userdata.h  platform_check.h  proxy_class.h  push_pointer_internal.cpp  type_list.h
osx/: .gitignore  Makefile.am  SDLMain.h  SDLMain.m  install_ports.sh  main.cpp  pioneer-Info.plist.in  pioneer-logo.icns  pioneer.sh  pioneerApp.xib
osx/SDL2_image.framework/: SDL2_image
osx/SDLMain.nib/: designable.nib  keyedobjects.nib
osx/package/: Distribution.xml
osx/pioneer/: pioneer-Info.plist  pioneer-Prefix.pch
osx/pioneer.xcodeproj/: project.pbxproj
osx/pioneer.xcworkspace/: contents.xcworkspacedata
src/: AIShip.cpp  AIShip.h  Aabb.h  AmbientSounds.cpp  AmbientSounds.h  Animation.h  AnimationCurves.h  Atmosphere.cpp  Atmosphere.h  BBAdvertChatForm.cpp  BBAdvertChatForm.h  Background.cpp  Background.h  BaseSphere.cpp  BaseSphere.h  Beam.cpp  Beam.h  BezierCurve.h  Body.cpp  Body.h  BodyComponent.cpp  BodyComponent.h  BufferObject.h  ByteRange.h  CMakeLists.sub.cmake  CMakeLists.txt  CRC32.cpp  CRC32.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CameraElement.cpp  CameraElement.h  CargoBody.cpp  CargoBody.h  ChatForm.cpp  ChatForm.h  CityOnPlanet.cpp  CityOnPlanet.h  (+625 more)
src/Logger/: Logger.cpp  Logger.h  MD5.cpp  MD5.h  SYSTEM.h  sha1.cpp
src/collider/: BVHTree.cpp  BVHTree.h  CMakeLists.txt  CollisionContact.h  CollisionSpace.cpp  CollisionSpace.h  Containers.h  Geom.cpp  Geom.h  GeomTree.cpp  GeomTree.h  Makefile.am  Weld.h  collider.h
src/core/: Application.cpp  Application.h  CMakeLists.txt  ConfigParser.cpp  ConfigParser.h  FNV1a.h  GZipFormat.cpp  GZipFormat.h  GuiApplication.cpp  GuiApplication.h  IniConfig.cpp  IniConfig.h  LZ4Format.cpp  LZ4Format.h  Log.cpp  Log.h  OS.h  Property.cpp  Property.h  Semaphore.h  StringHash.h  StringName.cpp  StringName.h  StringUtils.cpp  StringUtils.h  TaskGraph.cpp  TaskGraph.h  TypeId.h  macros.h  todo.h
src/editor/: ActionBinder.cpp  ActionBinder.h  CMakeLists.txt  EditorApp.cpp  EditorApp.h  EditorDraw.cpp  EditorDraw.h  EditorIcons.h  EditorWindow.cpp  EditorWindow.h  Modal.cpp  Modal.h  ModelViewer.cpp  ModelViewer.h  ModelViewerWidget.cpp  ModelViewerWidget.h  UndoStepType.h  UndoSystem.cpp  UndoSystem.h  ViewportWindow.cpp  ViewportWindow.h  editormain.cpp
src/galaxy/: AtmosphereParameters.h  CustomSystem.cpp  CustomSystem.h  CustomSystemDB.cpp  CustomSystemDB.h  Economy.cpp  Economy.h  ExplorationState.h  Faction.cpp  Faction.h  Factions.cpp  Factions.h  Galaxy.cpp  Galaxy.h  GalaxyCache.cpp  GalaxyCache.h  GalaxyConfig.cpp  GalaxyConfig.h  GalaxyEnums.h  GalaxyGenerator.cpp  GalaxyGenerator.h  Makefile.am  NameGenerator.cpp  NameGenerator.h  Polit.cpp  Polit.h  Random64.h  RingStyle.h  Sector.cpp  Sector.h  SectorCache.cpp  SectorCache.h  SectorGenerator.cpp  SectorGenerator.h  StarSystem.cpp  StarSystem.h  StarSystemGenerator.cpp  StarSystemGenerator.h  StarSystemWriter.cpp  StarSystemWriter.h  (+10 more)
src/gameui/: BindingCapture.cpp  BindingCapture.h  Face.cpp  Face.h  GalaxyMap.cpp  GalaxyMap.h  GameUI.h  LabelOverlay.cpp  LabelOverlay.h  Lua.cpp  Lua.h  LuaBindingCapture.cpp  LuaFace.cpp  LuaGalaxyMap.cpp  LuaModelSpinner.cpp  LuaShipSpinner.cpp  Makefile.am  ModelSpinner.cpp  ModelSpinner.h  Panel.cpp  Panel.h  ShipSpinner.cpp  ShipSpinner.h
src/graphics/: BufferCommon.h  CMakeLists.txt  Drawables.cpp  Drawables.h  Frustum.cpp  Frustum.h  GLDebug.h  Graphics.cpp  Graphics.h  Light.cpp  Light.h  Makefile.am  Material.cpp  Material.h  MaterialGL2.cpp  MaterialGL2.h  MaterialLegacy.cpp  MaterialLegacy.h  Mesh.cpp  Mesh.h  PostProcess.cpp  PostProcess.h  PostProcessing.cpp  PostProcessing.h  RenderState.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  RendererGL2.cpp  RendererGL2.h  RendererGLBuffers.h  RendererLegacy.cpp  RendererLegacy.h  SDLTextureBuilder.cpp  SDLTextureBuilder.h  Shader.cpp  Shader.h  ShaderParser.cpp  ShaderParser.h  (+23 more)
src/gui/: CMakeLists.txt  Gui.cpp  Gui.h  GuiAdjustment.h  GuiBox.cpp  GuiBox.h  GuiButton.cpp  GuiButton.h  GuiContainer.cpp  GuiContainer.h  GuiEvents.h  GuiFixed.cpp  GuiFixed.h  GuiGradient.cpp  GuiGradient.h  GuiISelectable.h  GuiImage.cpp  GuiImage.h  GuiImageButton.cpp  GuiImageButton.h  GuiImageRadioButton.cpp  GuiImageRadioButton.h  GuiImageSet.cpp  GuiImageSet.h  GuiLabel.cpp  GuiLabel.h  GuiLabelSet.cpp  GuiLabelSet.h  GuiMeterBar.cpp  GuiMeterBar.h  GuiMultiStateImageButton.cpp  GuiMultiStateImageButton.h  GuiScreen.cpp  (+30 more)
tools/: CMakeLists.txt  basic_cbor.h  hyg-database-to-json.cpp
win32/: Makefile.am
(+6107 files in other folders)
